@@ -5,7 +5,6 @@ INCLUDES = \
 	-DGNOME_ICONDIR=\""${prefix}/share/pixmaps"\"			\
 	-DG_LOG_DOMAIN=\"capplet-common\"				\
 	-I$(top_srcdir)/						\
-	-I$(top_srcdir)/intl						\
 	@CAPPLET_CFLAGS@
 
 noinst_LIBRARIES = libcommon.a
